{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 25,
  "lineage": "fff37c9e-ddd2-09bc-f14f-3e64f4b82f7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sample-terraform-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a10b02b6aa45dac",
            "associate_with_private_ip": "10.0.1.12",
            "association_id": "eipassoc-01449dcb688e1844d",
            "domain": "vpc",
            "id": "eipalloc-09a10b02b6aa45dac",
            "instance": "i-03d4cd3dae1a0a28f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0a0e5c281b58211e9",
            "private_dns": "ip-10-0-1-12.us-east-2.compute.internal",
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-52-15-42-222.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.42.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SampleTerraformEIP"
            },
            "tags_all": {
              "Name": "SampleTerraformEIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.sample-terraform-igw",
            "aws_network_interface.sample-terraform-eni",
            "aws_security_group.terraform-sample-security-group",
            "aws_subnet.sample-terraform-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d1e544b84bf7502",
            "arn": "arn:aws:ec2:us-east-2:479918570381:instance/i-03d4cd3dae1a0a28f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d4cd3dae1a0a28f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "terraform-practice",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0a0e5c281b58211e9"
              }
            ],
            "primary_network_interface_id": "eni-0a0e5c281b58211e9",
            "private_dns": "ip-10-0-1-12.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.12",
            "public_ip": "52.15.42.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06406f8aeb1a0520c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3745036516b1548",
            "tags": {
              "Name": "SampleInstance"
            },
            "tags_all": {
              "Name": "SampleInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c72d4600879ac5d"
            ]
          },
          "dependencies": [
            "aws_network_interface.sample-terraform-eni",
            "aws_security_group.terraform-sample-security-group",
            "aws_subnet.sample-terraform-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sample-terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:479918570381:internet-gateway/igw-020c909d04c167476",
            "id": "igw-020c909d04c167476",
            "owner_id": "479918570381",
            "vpc_id": "vpc-01afa9ab47204cd7e"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sample-terraform-eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:479918570381:network-interface/eni-0a0e5c281b58211e9",
            "id": "eni-0a0e5c281b58211e9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:cf:39:c8:95:e4",
            "owner_id": "479918570381",
            "private_ip": "10.0.1.12",
            "private_ip_list": [
              "10.0.1.12"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.12"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-02c72d4600879ac5d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3745036516b1548",
            "tags": {
              "Name": "SampleTerraformENI"
            },
            "tags_all": {
              "Name": "SampleTerraformENI"
            }
          },
          "dependencies": [
            "aws_security_group.terraform-sample-security-group",
            "aws_subnet.sample-terraform-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-terraform-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:479918570381:route-table/rtb-0b6dd28faa2f0cfd4",
            "id": "rtb-0b6dd28faa2f0cfd4",
            "owner_id": "479918570381",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020c909d04c167476",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020c909d04c167476",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SampleTerraformRT"
            },
            "tags_all": {
              "Name": "SampleTerraformRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01afa9ab47204cd7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sample-terraform-igw",
            "aws_vpc.terraform-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sample-terraform-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5bf7bb2e94e3c57",
            "route_table_id": "rtb-0b6dd28faa2f0cfd4",
            "subnet_id": "subnet-0c3745036516b1548"
          },
          "dependencies": [
            "aws_internet_gateway.sample-terraform-igw",
            "aws_route_table.sample-terraform-rt",
            "aws_subnet.sample-terraform-subnet",
            "aws_vpc.terraform-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sample-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:479918570381:security-group/sg-02c72d4600879ac5d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c72d4600879ac5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "479918570381",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SampleTerraformSecurityGroup"
            },
            "tags_all": {
              "Name": "SampleTerraformSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-01afa9ab47204cd7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-terraform-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:479918570381:subnet/subnet-0c3745036516b1548",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3745036516b1548",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "479918570381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SampleTerra1Subnet"
            },
            "tags_all": {
              "Name": "SampleTerra1Subnet"
            },
            "vpc_id": "vpc-01afa9ab47204cd7e"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:479918570381:vpc/vpc-01afa9ab47204cd7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c103d6565457cb74",
            "default_route_table_id": "rtb-06cf59d86e636c240",
            "default_security_group_id": "sg-03ac917a966195a4d",
            "dhcp_options_id": "dopt-09661b376ef658cac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01afa9ab47204cd7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06cf59d86e636c240",
            "owner_id": "479918570381",
            "tags": {
              "Name": "SampleTerraformVPC"
            },
            "tags_all": {
              "Name": "SampleTerraformVPC"
            }
          }
        }
      ]
    }
  ]
}